[package]
name = "music_player"
version = "0.1.0"
authors = ["Lunar <lunar@forsaken-borders.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"
tinyfiledialogs = "3.3.9"
dirs = "2.0.2"
walkdir = "2.3.1"